2003-05-07  John Levon  <levon@movementarian.org>

	* libpp/derive_files.h:
	* libpp/derive_files.cpp: rework into extra_images
	class

	* libpp/partition_files.h:
	* libpp/partition_files.cpp:
	* pp/common_option.h:
	* pp/common_option.cpp:
	* pp/opannotate.cpp:
	* pp/opgprof.cpp:
	* pp/opreport.cpp: use the above

2003-05-07  John Levon  <levon@movementarian.org>

	* libpp/Makefile.am:
	* session.h:
	* session.cpp: remove session.{h,cpp}

2003-05-07  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/oprofpp.cpp pp/oprofpp_options.cpp pp/oprofpp_options.h:
	* pp/op_time.cpp pp/op_time_options.cpp pp/op_time_options.h:
	* pp/op_to_source.cpp pp/op_to_source_options.cpp
	* pp/op_to_source_options.h pp/op_merge.cpp: removed files

	* pp/makefile.am: update

2003-05-06  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opgprof.cpp: infamous typo

	* pp/opannotate.cpp: output sample file header


2003-05-06  Philippe Elie  <phil.el@wanadoo.fr>

	* libpop++/op_mangling.h:
	* libpop++/op_mangling.cpp: removed file
	* libop++/op_header.h:
	* libop++/op_header.cpp: new file, misc function acting on sample
	  file header stolen from libpp/profile.(cpp|h)
	* libop++/op_print_event.h: typo
	* libop++/op_print_event.cpp: save/restore ostream state
	* libop++/Makefile.am: update
	
	* libop/op_sample_file.h: remove dead #define OPD_MANGLE_CHAR

	* libpp/profile.h:
	* libpp/profile.cpp: move some member function to free function in
	  libop++/op_header.(cpp|h)
	* libpp/profile_container.cpp: minor call change

	* libpp/Makefile.am: op_merge can't be compiled currently inhibit build

	* libpp/opreport.cpp: output sample file header

2003-05-06  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/path_filter.h: default param to empty string not "*"

	* libpp/symbol_functors.h: remove dead code

	* pp/opgprof.cpp: off by one in histsize calculation

2003-05-04  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/op_file.h:
	* libutil/op_file.c: sanitize create_path()
